# fastpath

./: .coveragerc  .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  pyrightconfig.json  pytest.toml  ruff.toml
app/: main.py
app/api/v1/routers/: health_check_router.py  path_router.py  root_router.py
app/core/: database.py  settings.py
app/exceptions/: erros.py
app/repositories/: path_repository.py
app/schemas/: coordinates_schema.py  filters_params_schema.py  path_schema.py
app/schemas/examples/: path_example.py
app/services/: path_service.py
app/tests/: conftest.py  test_paths.py  test_root.py
app/tests/factories/: coordinates_factory.py  path_factory.py
