[project]
name = "fastpath"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.0",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
